# adb-files-tui

./: CMakeLists.txt  CODEX_HISTORY.md  LICENSE  README.md  README_ZH.md
src/: adb_client.cpp  adb_client.h  app.cpp  app.h  main.cpp
